LPS add img, page, etc

--- a/Landing_webinar_ch.html
+++ b/Landing_webinar_ch.html
@@ -1,16 +1,129 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg" type="image/png">
     <title>Proyecto Chancay</title>
+    <link rel="stylesheet" href="./css/webinar.css">
 </head>
-<body>
-    <header>
 
-    </header>
-    
-    
+<body>
+    <main>
+        <header>
+
+            <h1>Descubre la Oportunidad de Inversión en Chancay</h1>
+            <div>
+                <video id="miVideo" autoplay loop>
+                    <source src="./assets/o.mp4" type="video/mp4">
+                    Tu navegador no soporta la reproducción de videos en HTML5.
+                </video>
+                <button id="playPauseButton">Play/Pause</button>
+
+
+            </div>
+        </header>
+        <section>
+            <h3>Detalles del Webinar:</h3>
+            <ul>
+                <li>Fecha: <strong>Domingo 18 de febrero</strong> </li>
+                <li>Hora: <strong>7.00 pm</strong></li>
+                <li>Duracion: <strong>1 hora</strong></li>
+            </ul>
+        </section>
+        <section>
+            <h3>Temas a tratar:</h3>
+            <ol>
+                <li>Introducción al Proyecto Chancay y su ubicación estratégica cerca del megapuerto.</li>
+                <li>Análisis del potencial de crecimiento y las oportunidades de inversión en la zona.</li>
+                <li>Presentación de cómo maximizamos los retornos para nuestros inversionistas.</li>
+                <li>Modelo de inversión y garantías proporcionadas a los inversores.
+                    Oportunidad de hacer preguntas en vivo durante el webinar.
+                </li>
+            </ol>
+        </section>
+        <section>
+            <h3>Regístrate ahora para asegurar tu lugar en este exclusivo evento.</h3>
+            <div>
+                <div id="mc_embed_shell">
+                    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet"
+                        type="text/css">
+                    <div id="mc_embed_signup">
+                        <form
+                            action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                            class="validate" target="_blank">
+                            <div id="mc_embed_signup_scroll">
+                                <h2>Suscríbete</h2>
+                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
+                                            class="asterisk">*</span></label><input type="email" name="EMAIL"
+                                        class="required email" id="mce-EMAIL" required="" value=""><span
+                                        id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
+                                <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text"
+                                        name="FNAME" class=" text" id="mce-FNAME" value=""></div>
+                                <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input
+                                        type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+                                <div hidden=""><input type="hidden" name="tags" value="5179753"></div>
+                                <div id="mce-responses" class="clear foot">
+                                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                                </div>
+                                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                    <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1"
+                                        value="">
+                                </div>
+                                <div class="optionalParent">
+                                    <div class="clear foot">
+                                        <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                            value="Enviar">
+                                        <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
+                                                title="Mailchimp: marketing por correo electrónico fácil y divertido"><span
+                                                    style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                                                        class="refferal_badge"
+                                                        src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                                        alt="Intuit Mailchimp"
+                                                        style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <script type="text/javascript"
+                        src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+                    <script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);
+                    </script>
+                </div>
+            </div> <br>
+            <p>¡No te pierdas esta oportunidad única de inversión! Regístrate ahora y comienza tu viaje hacia el éxito
+                financiero con Vive Rentable.</p>
+        </section>
+
+    </main>
+    <footer>
+        <p>¡No pierdas la oportunidad de explorar el potencial de inversión en el negocio de CHANCAY con VIVE Rentable!
+            <br>
+            © 2024 VIVE Rentable
+        </p>
+
+    </footer>
+    <script>
+        var video = document.getElementById("miVideo");
+        var playPauseButton = document.getElementById("playPauseButton");
+
+        playPauseButton.addEventListener("click", function () {
+            if (video.paused) {
+                video.play();
+                playPauseButton.textContent = "Pause";
+            } else {
+                video.pause();
+                playPauseButton.textContent = "Play";
+            }
+        });
+
+    </script>
 </body>
+
 </html>
