--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
     <title>Webinar EXCLUSIVO</title>
-    <link rel="stylesheet" href="./css/webinar_camara_banano.css">
+    <link rel="stylesheet" href="./css/webinar.css">
 </head>
 
 <body>
     <main>
         <header>
-            <h1>Las cámaras de maduración de banano:
-                Un negocio rentable en el boom agrícola</h1>
+            <h1>Las cámaras de maduración de banano</h1>
+            
         </header>
         <section>
+            <h2>Un negocio rentable en el boom agrícola</h2>
             <p>En pleno auge de la <strong>Agricultura peruana</strong>, invertir bien es invertir en las necesidades de
                 un sector que
                 crece de manera acelerada y que aún pocos inversionistas lo hacen. Los que hacen no solo ven retornar
                 su <strong>inversión de manera rápida</strong>, sino que multiplican su capital</p>
-            <img src="./assets/cm-005.png" alt="imagen">
+            <img src="./assets/cm-004.jpg" alt="imagen">
             <p>Muchos invierten en sembrar y pocos invierten en <strong>satisfacer las necesidades</strong> de los que
                 siembran y del
                 producto cosechado: ¡Los servicios de conservación y maduración!</p>
@@ -31,6 +32,7 @@
                 crecimiento?</p>
 
             <h2>¡Descubre cómo hacerlo en Nuestro Webinar Exclusivo!. </h2>
+            
 
         </section>
 
@@ -44,7 +46,7 @@
                         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                         target="_blank">
                         <div id="mc_embed_signup_scroll">
-                            <h2>Suscribir</h2>
+                            <h2>Suscribete</h2>
                             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                             <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                                         class="asterisk">*</span></label><input type="email" name="EMAIL"
@@ -64,7 +66,7 @@
                             <div class="optionalParent">
                                 <div class="clear foot">
                                     <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                        value="Subscribe">
+                                        value="Enviar">
                                     <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
                                             title="Mailchimp - email marketing made easy and fun"><span
                                                 style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
@@ -103,6 +105,7 @@
             <h3>4. Explora las Ventajas Competitivas del Servicio de Maduración:</h3>
             <p>🔄 Entiende por qué el negocio de maduración de banano ofrece un flujo de ingresos continuo y cómo puedes
                 diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
+                <img src="./assets/cm-007.webp" alt="imagen">
 
         </section>
 
