--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </p>
         <div class="footer__socials">
           <span>
-            <a href="https://www.facebook.com/profile.php?id=61555321947537" target="_blank"><i
+            <a href="https://www.facebook.com/viverentable" target="_blank"><i
                 class="ri-facebook-circle-fill"></i></a>
           </span>
           <span>
@@ -237,6 +237,9 @@
           </span>
           <span>
             <a href="https://www.tiktok.com/@vive_rentable_" target="_blank"><i class="ri-tiktok-fill"></i></a>
+          </span>
+          <span>
+            <a href="https://www.linkedin.com/company/vive-rentable/" target="_blank"><i class="ri-linkedin-fill"></i></a>
           </span>
         </div>
       </div>
