add google tags

--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -2,6 +2,15 @@
 <html lang="es">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
@@ -10,10 +19,14 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <main>
         <header>
             <h1>Las cámaras de maduración de banano</h1>
-            
+
         </header>
         <section>
             <h2>Un negocio rentable en el boom agrícola</h2>
@@ -32,7 +45,7 @@
                 crecimiento?</p>
 
             <h2>¡Descubre cómo hacerlo en Nuestro Webinar Exclusivo!. </h2>
-            
+
 
         </section>
 
@@ -105,7 +118,7 @@
             <h3>4. Explora las Ventajas Competitivas del Servicio de Maduración:</h3>
             <p>🔄 Entiende por qué el negocio de maduración de banano ofrece un flujo de ingresos continuo y cómo puedes
                 diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
-                <img src="./assets/cm-007.webp" alt="imagen">
+            <img src="./assets/cm-007.webp" alt="imagen">
 
         </section>
 
