--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="es">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
+
   <meta charset="UTF-8" />
   <link rel="icon" href="./assets/logo.svg" type="image/x-icon">
   <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
@@ -22,6 +32,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <nav>
     <div class="nav__bar">
       <div class="nav__logo"><a href="#">Vive Rentable</a></div>
@@ -51,6 +65,8 @@
       </div>
     </div>
   </header>
+
+
   <!-- CRONOMETRO WEBINAR -->
   <section class="contador">
     <div class="container">
@@ -72,8 +88,9 @@
             <img src="./assets/cmb-001.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h4 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h4>
-              <p class="card-text">Bajo este escenario de <br> inversión de 4 socios, el porcentaje de participación del 25%
-                les da un margen de utilidad mensual  <br>de S/12,100</p>
+              <p class="card-text">Bajo este escenario de <br> inversión de 4 socios, el porcentaje de participación del
+                25%
+                les da un margen de utilidad mensual <br>de S/12,100</p>
               <a target="_blank" href="./maduracion-de-banano.html" class="btn btn__secondary">Saber más</a>
             </div>
           </div>
@@ -90,6 +107,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-md-4 mb-4">
           <div class="card">
             <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
@@ -101,6 +119,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </section>
@@ -202,9 +221,8 @@
         </form>
       </div>
       <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-      <script
-        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);
-        </script>
+      <script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);
+      </script>
     </div>
   </section>
 
@@ -227,8 +245,7 @@
         </p>
         <div class="footer__socials">
           <span>
-            <a href="https://www.facebook.com/viverentable" target="_blank"><i
-                class="ri-facebook-circle-fill"></i></a>
+            <a href="https://www.facebook.com/viverentable" target="_blank"><i class="ri-facebook-circle-fill"></i></a>
           </span>
           <span>
             <a href="https://www.instagram.com/vive_rentable/" target="_blank"><i class="ri-instagram-line"></i></a>
@@ -237,7 +254,8 @@
             <a href="https://www.tiktok.com/@vive_rentable_" target="_blank"><i class="ri-tiktok-fill"></i></a>
           </span>
           <span>
-            <a href="https://www.linkedin.com/company/vive-rentable/" target="_blank"><i class="ri-linkedin-fill"></i></a>
+            <a href="https://www.linkedin.com/company/vive-rentable/" target="_blank"><i
+                class="ri-linkedin-fill"></i></a>
           </span>
         </div>
       </div>
