--- a/Landing_webinar_ch.html
+++ b/Landing_webinar_ch.html
@@ -2,6 +2,15 @@
 <html lang="es">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg" type="image/png">
@@ -10,6 +19,10 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <main>
         <header>
 
@@ -17,13 +30,13 @@
             <div>
                 <video id="miVideo" autoplay loop>
                     <source src="./assets/o.mp4" type="video/mp4">
-                    Tu navegador no soporta la reproducción de videos en HTML5.
                 </video>
                 <button id="playPauseButton">Play/Pause</button>
 
 
             </div>
         </header>
+
         <section>
             <h3>Detalles del Webinar:</h3>
             <ul>
@@ -32,6 +45,7 @@
                 <li>Duracion: <strong>1 hora</strong></li>
             </ul>
         </section>
+
         <section>
             <h3>Temas a tratar:</h3>
             <ol>
@@ -43,6 +57,7 @@
                 </li>
             </ol>
         </section>
+
         <section>
             <h3>Regístrate ahora para asegurar tu lugar en este exclusivo evento.</h3>
             <div>
