--- a/gracias.html
+++ b/gracias.html
@@ -2,6 +2,15 @@
 <html lang="es">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gracias por suscribirte</title>
@@ -52,9 +61,14 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="container">
         <h1>¡Gracias por suscribirte!</h1>
-        <p>Estamos emocionados de tenerte a bordo. Ahora estarás al tanto de todas nuestras actualizaciones y noticias.</p>
+        <p>Estamos emocionados de tenerte a bordo. Ahora estarás al tanto de todas nuestras actualizaciones y noticias.
+        </p>
         <a href="./index.html" class="button">Volver al inicio</a>
     </div>
 </body>
