--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -23,43 +23,69 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+
+    <header>
+
+        <section class="banner">
+            <div class="banner-content">
+                <h1>Las cámaras de maduración de banano</h1>
+                <h2>Un negocio rentable en el boom agrícola</h2>
+                <a href="#contacto">información</a>
+
+
+            </div>
+        </section>
+
+    </header>
+
     <main>
-        <header>
-            <h1>Las cámaras de maduración de banano</h1>
+        <section class="section_data">
 
-        </header>
-        <section>
-            <h2>Un negocio rentable en el boom agrícola</h2>
-            <p>En pleno auge de la <strong>Agricultura peruana</strong>, invertir bien es invertir en las necesidades de
-                un sector que
-                crece de manera acelerada y que aún pocos inversionistas lo hacen. Los que hacen no solo ven retornar
-                su <strong>inversión de manera rápida</strong>, sino que multiplican su capital</p>
-            <img src="./assets/cm-004.jpg" alt="imagen">
-            <p>Muchos invierten en sembrar y pocos invierten en <strong>satisfacer las necesidades</strong> de los que
-                siembran y del
-                producto cosechado: ¡Los servicios de conservación y maduración!</p>
-            <p>Ahí es donde la demanda <strong>supera a la oferta</strong> y se abren las oportunidades para todo
-                inversor visionario.
-            </p>
-            <p>¿Te gustaría <strong>conocer más</strong> y analizar la posibilidad de ser parte de un sector en
-                crecimiento?</p>
+            <div>
+                <h3>Se abren las oportunidades para todo
+                    inversor visionario</h3>
+                <p>En pleno auge de la <strong>Agricultura peruana</strong>, invertir bien es invertir en las
+                    necesidades de
+                    un sector que
+                    crece de manera acelerada y que aún pocos inversionistas lo hacen. Los que hacen no solo ven
+                    retornar
+                    su <strong>inversión de manera rápida</strong>, sino que multiplican su capital</p>
+                <p>Muchos invierten en sembrar y pocos invierten en <strong>satisfacer las necesidades</strong> de los
+                    que
+                    siembran y del
+                    producto cosechado: ¡Los servicios de conservación y maduración!</p>
+                <p>Ahí es donde la demanda <strong>supera a la oferta</strong> y se abren las oportunidades para todo
+                    inversor visionario.
+                </p>
+                <p>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un <strong>sector en
+                    crecimiento</strong>? </p>
 
-            <h2>¡Descubre cómo hacerlo en Nuestro Webinar Exclusivo!. </h2>
+
+            </div>
+            <div>
+                <img src="./assets/gift.gif" alt="empresario">
+            </div>
+
+
 
 
         </section>
 
-        <section class="container">
+        <!-- MAILCHIMP -->
+        <section class="container" id="contacto">
+
+            <h2>¡Descubre cómo hacerlo en Nuestro Webinar Exclusivo!. </h2>
             <div id="mc_embed_shell">
                 <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
 
-                <div id="mc_embed_signup">
+                <div id="mc_embed_signup" >
                     <form
                         action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
                         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                         target="_blank">
-                        <div id="mc_embed_signup_scroll">
-                            <h2>Suscribete</h2>
+                        <div id="mc_embed_signup_scroll" class="animate-bg">
+                            <h3>Suscribete</h3>
                             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                             <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                                         class="asterisk">*</span></label><input type="email" name="EMAIL"
@@ -101,24 +127,45 @@
 
 
         </section>
+        <!-- MAILCHIMP -->
 
-        <section>
-            <h2>¿Por qué deberías unirte a nuestro webinar?</h2>
-            <h3>1. Conoce el Potencial de Rentabilidad:</h3>
-            <p>📈 Aprende sobre el creciente mercado del banano y cómo puedes obtener ganancias tangibles desde el
-                primer día brindando servicios para el sector bananero. </p>
-            <h3>2. Entiende el Impacto de la Demanda y Oferta:</h3>
-            <p>🍌 Obtén información valiosa sobre el crecimiento del consumo de banano en Perú y la demanda insatisfecha
-                de servicios de maduración en ciudades como Lima, Arequipa, Trujillo, Piura. Comprende cómo esta brecha
-                entre la demanda y la oferta puede ser una oportunidad de inversión lucrativa para ti.</p>
-            <h3>3. Descubre una Alternativa Rentable a la Agricultura Tradicional:</h3>
-            <p>🚜 Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción de participar
-                en el negocio de servicios de maduración de banano. Aprende por qué esta alternativa ofrece ingresos
-                constantes desde el primer día y cómo puedes recuperar tu inversión en un plazo mucho más corto.</p>
-            <h3>4. Explora las Ventajas Competitivas del Servicio de Maduración:</h3>
-            <p>🔄 Entiende por qué el negocio de maduración de banano ofrece un flujo de ingresos continuo y cómo puedes
-                diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
-            <img src="./assets/cm-007.webp" alt="imagen">
+        <section class="section_info">
+            <h2 class="pregunta">¿Por qué deberías unirte a nuestro webinar?</h2>
+            <div class="cards_container">
+                <div class="card">
+                    <h3>Conoce el Potencial de Rentabilidad:</h3>
+                    <p>📈 Aprende sobre el creciente mercado del banano y cómo puedes obtener ganancias tangibles desde
+                        el
+                        primer día brindando servicios para el sector bananero. </p>
+                </div>
+                <div class="card yellow">
+                    <h3>Entiende el Impacto de la Demanda y Oferta:</h3>
+                    <p>🍌 Obtén información valiosa sobre el crecimiento del consumo de banano en Perú y la demanda
+                        insatisfecha
+                        de servicios de maduración en ciudades como Lima, Arequipa, Trujillo, Piura. Comprende cómo esta
+                        brecha
+                        entre la demanda y la oferta puede ser una oportunidad de inversión lucrativa para ti.</p>
+                </div>
+                <div class="card yellow">
+                    <h3>Descubre una Alternativa Rentable a la Agricultura Tradicional:</h3>
+                    <p>🚜 Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción de
+                        participar
+                        en el negocio de servicios de maduración de banano. Aprende por qué esta alternativa ofrece
+                        ingresos
+                        constantes desde el primer día y cómo puedes recuperar tu inversión en un plazo mucho más corto.
+                    </p>
+                </div>
+                <div class="card">
+                    <h3>Explora las Ventajas Competitivas del Servicio de Maduración:</h3>
+                    <p>🔄 Entiende por qué el negocio de maduración de banano ofrece un flujo de ingresos continuo y
+                        cómo puedes
+                        diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
+                </div>
+
+            </div>
+
+
+
 
         </section>
 
@@ -130,6 +177,8 @@
         </p>
 
     </footer>
+
+    <script src="./js/main.js"></script>
 </body>
 
 
