LPS delete count

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 
 
   <!-- CRONOMETRO WEBINAR -->
-  <section class="contador">
+  <!-- <section class="contador">
     <div class="container">
       <h2>Próximo webinar gratuito</h2>
       <div id="cuenta"></div>
       <a href="#contact"><button class="btn btn__secondary">Quiero participar</button></a>
 
     </div>
-  </section>
+  </section> -->
 
 
   <!-- CARDS -->
