LPS update page and add video

--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -16,6 +16,7 @@
     <link rel="icon" href="./assets/logo.svg">
     <title>Webinar EXCLUSIVO</title>
     <link rel="stylesheet" href="./css/webinar.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -29,10 +30,17 @@
 
         <section class="banner">
             <div class="banner-content">
-                <h1>Las cámaras de maduración de banano</h1>
-                <h2>Un negocio rentable en el boom agrícola</h2>
-                <a href="#contacto">información</a>
+                <div class="text_content">
 
+
+                    <div class="text_01">
+                        <img class="logo" src="./assets/logo_negativo.png" alt="logo">
+                        <h1>Las cámaras de maduración de banano</h1>
+                        <h2>Un negocio rentable en el boom agrícola</h2>
+                        <a href="#contacto">información</a>
+
+                    </div>
+                </div>
 
             </div>
         </section>
@@ -41,14 +49,18 @@
 
     <main>
         <section class="section_data">
+            <div>
+                <img src="./assets/vertical.jpg" alt="empresario">
+            </div>
 
             <div>
-                <h3>Se abren las oportunidades para todo
-                    inversor visionario</h3>
+                <h3>BENEFICIOS</h3>
                 <p>En pleno auge de la <strong>Agricultura peruana</strong>, invertir bien es invertir en las
                     necesidades de
                     un sector que
-                    crece de manera acelerada y que aún pocos inversionistas lo hacen. Los que hacen no solo ven
+                    crece de manera acelerada y que aún pocos inversionistas lo hacen.
+
+                <p>Los que hacen no solo ven
                     retornar
                     su <strong>inversión de manera rápida</strong>, sino que multiplican su capital</p>
                 <p>Muchos invierten en sembrar y pocos invierten en <strong>satisfacer las necesidades</strong> de los
@@ -59,33 +71,78 @@
                     inversor visionario.
                 </p>
                 <p>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un <strong>sector en
-                    crecimiento</strong>? </p>
-
-
+                        crecimiento</strong>? </p>
             </div>
-            <div>
-                <img src="./assets/gift.gif" alt="empresario">
+        </section>
+
+
+
+        <section class="section_info">
+            <h2 class="pregunta">¿Por qué deberías unirte a nuestro webinar?</h2>
+            <div class="cards_container">
+                <div class="card">
+                    <h3>Conoce el Potencial de Rentabilidad</h3>
+                    <p>Aprende sobre el creciente mercado del banano y cómo puedes obtener ganancias tangibles desde
+                        el
+                        primer día brindando servicios para el sector bananero. </p>
+                </div>
+                <div class="card video">
+                    <video src="./assets/videos/v001.mp4" type="video/mp4" autoplay muted loop></video>
+
+                </div>
+                <div class="card video">
+                    <video src="./assets/videos/v002.mp4" type="video/mp4" autoplay muted loop></video>
+
+                </div>
+
+                <div class="card">
+                    <h3>Entiende el Impacto de la Demanda y Oferta</h3>
+                    <p>Obtén información valiosa sobre el crecimiento del consumo de banano en Perú y la demanda
+                        insatisfecha
+                        de servicios de maduración en ciudades como Lima, Arequipa, Trujillo, Piura. Comprende cómo esta
+                        brecha
+                        entre la demanda y la oferta puede ser una oportunidad de inversión lucrativa para ti.</p>
+                </div>
+                <div class="card">
+                    <h3>Descubre una Alternativa Rentable a la Agricultura Tradicional</h3>
+                    <p>Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción de
+                        participar
+                        en el negocio de servicios de maduración de banano. Aprende por qué esta alternativa ofrece
+                        ingresos
+                        constantes desde el primer día y cómo puedes recuperar tu inversión en un plazo mucho más corto.
+                    </p>
+                </div>
+                <div class="card video">
+                    <img src="./assets/im001.jpeg" alt="">
+
+                </div>
+                <div class="card video">
+                    <img src="./assets/im003.jpeg" alt="">
+
+                </div>
+                <div class="card">
+                    <h3>Explora las Ventajas Competitivas del Servicio de Maduración</h3>
+                    <p>Entiende por qué el negocio de maduración de banano ofrece un flujo de ingresos continuo y
+                        cómo puedes
+                        diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
+                </div>
             </div>
-
-
-
-
         </section>
 
         <!-- MAILCHIMP -->
         <section class="container" id="contacto">
 
-            <h2>¡Descubre cómo hacerlo en Nuestro Webinar Exclusivo!. </h2>
+            <h3>¡Descubre cómo hacerlo en Nuestro Webinar Exclusivo!</h3>
             <div id="mc_embed_shell">
                 <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
 
-                <div id="mc_embed_signup" >
+                <div id="mc_embed_signup">
                     <form
                         action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
                         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                         target="_blank">
                         <div id="mc_embed_signup_scroll" class="animate-bg">
-                            <h3>Suscribete</h3>
+                            <h4>Suscribete</h4>
                             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                             <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                                         class="asterisk">*</span></label><input type="email" name="EMAIL"
@@ -129,54 +186,58 @@
         </section>
         <!-- MAILCHIMP -->
 
-        <section class="section_info">
-            <h2 class="pregunta">¿Por qué deberías unirte a nuestro webinar?</h2>
-            <div class="cards_container">
-                <div class="card">
-                    <h3>Conoce el Potencial de Rentabilidad:</h3>
-                    <p>📈 Aprende sobre el creciente mercado del banano y cómo puedes obtener ganancias tangibles desde
-                        el
-                        primer día brindando servicios para el sector bananero. </p>
-                </div>
-                <div class="card yellow">
-                    <h3>Entiende el Impacto de la Demanda y Oferta:</h3>
-                    <p>🍌 Obtén información valiosa sobre el crecimiento del consumo de banano en Perú y la demanda
-                        insatisfecha
-                        de servicios de maduración en ciudades como Lima, Arequipa, Trujillo, Piura. Comprende cómo esta
-                        brecha
-                        entre la demanda y la oferta puede ser una oportunidad de inversión lucrativa para ti.</p>
-                </div>
-                <div class="card yellow">
-                    <h3>Descubre una Alternativa Rentable a la Agricultura Tradicional:</h3>
-                    <p>🚜 Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción de
-                        participar
-                        en el negocio de servicios de maduración de banano. Aprende por qué esta alternativa ofrece
-                        ingresos
-                        constantes desde el primer día y cómo puedes recuperar tu inversión en un plazo mucho más corto.
-                    </p>
-                </div>
-                <div class="card">
-                    <h3>Explora las Ventajas Competitivas del Servicio de Maduración:</h3>
-                    <p>🔄 Entiende por qué el negocio de maduración de banano ofrece un flujo de ingresos continuo y
-                        cómo puedes
-                        diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
-                </div>
+    </main>
 
+
+    <footer class="footer">
+        <div class="section__container footer__container">
+            <div class="footer__col">
+                <h4>Vive Rentable</h4>
+                <p>
+                    La plataforma invita a los
+                    inversores a ser agentes de cambio en
+                    sectores como agroindustria,
+                    inmobiliario y tecnología. Transforma
+                    las inversiones en acciones, brindando
+                    oportunidades para participar en
+                    proyectos monumentales y ser
+                    protagonistas de historias de éxito.
+                </p>
+                <div class="footer__socials">
+                    <span>
+                        <a href="https://www.facebook.com/viverentable" target="_blank"><i
+                                class="ri-facebook-circle-fill"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.instagram.com/vive_rentable/" target="_blank"><i
+                                class="ri-instagram-line"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.tiktok.com/@vive_rentable_" target="_blank"><i
+                                class="ri-tiktok-fill"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.linkedin.com/company/vive-rentable/" target="_blank"><i
+                                class="ri-linkedin-fill"></i></a>
+                    </span>
+                </div>
             </div>
 
-
-
-
-        </section>
-
-    </main>
-    <footer>
-        <p>¡No pierdas la oportunidad de explorar el potencial de inversión en el negocio del banano con VIVE Rentable!
-            <br>
-            © 2024 VIVE Rentable
-        </p>
-
+            <div class="footer__col">
+                <h4>Contacto</h4>
+                <a href="#contact">
+                    <span><i class="ri-mail-line"></i></span> info@vive-rentable.com
+                </a>
+                <a href="https://wa.link/garf4f" target="_blank">
+                    <span><i class="ri-phone-line"></i></span>947548260
+                </a>
+            </div>
+        </div>
+        <div class="footer__bar">
+            Copyright © 2024 vive-rentable.com All rights reserved.
+        </div>
     </footer>
+
 
     <script src="./js/main.js"></script>
 </body>
