--- a/Landing_webinar_ch.html
+++ b/Landing_webinar_ch.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg" type="image/png">
     <title>Proyecto Chancay</title>
-    <link rel="stylesheet" href="./css/webinar.css">
+    <link rel="stylesheet" href="./css/webinar_ch.css">
 </head>
 
 <body>
