--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -17,6 +17,9 @@
     <title>Webinar EXCLUSIVO</title>
     <link rel="stylesheet" href="./css/webinar.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
+
+    <!-- SWIPER CSS-->
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -35,7 +38,7 @@
 
                     <div class="text_01">
                         <img class="logo" src="./assets/logo_negativo.png" alt="logo">
-                        <h1>Las cámaras de maduración de banano</h1>
+                        <h1>Cámaras de maduración de banano</h1>
                         <h2>Un negocio rentable en el boom agrícola</h2>
                         <a href="#contacto">información</a>
 
@@ -47,13 +50,16 @@
 
     </header>
 
+
+
     <main>
+
         <section class="section_data">
             <div>
                 <img src="./assets/vertical.jpg" alt="empresario">
             </div>
 
-            <div>
+            <div class="text_data">
                 <h3>BENEFICIOS</h3>
                 <p>En pleno auge de la <strong>Agricultura peruana</strong>, invertir bien es invertir en las
                     necesidades de
@@ -76,63 +82,25 @@
         </section>
 
 
-
-        <section class="section_info">
-            <h2 class="pregunta">¿Por qué deberías unirte a nuestro webinar?</h2>
-            <div class="cards_container">
-                <div class="card">
-                    <h3>Conoce el Potencial de Rentabilidad</h3>
-                    <p>Aprende sobre el creciente mercado del banano y cómo puedes obtener ganancias tangibles desde
-                        el
-                        primer día brindando servicios para el sector bananero. </p>
-                </div>
-                <div class="card video">
-                    <video src="./assets/videos/v001.mp4" type="video/mp4" autoplay muted loop></video>
-
-                </div>
-                <div class="card video">
-                    <video src="./assets/videos/v002.mp4" type="video/mp4" autoplay muted loop></video>
-
-                </div>
-
-                <div class="card">
-                    <h3>Entiende el Impacto de la Demanda y Oferta</h3>
-                    <p>Obtén información valiosa sobre el crecimiento del consumo de banano en Perú y la demanda
-                        insatisfecha
-                        de servicios de maduración en ciudades como Lima, Arequipa, Trujillo, Piura. Comprende cómo esta
-                        brecha
-                        entre la demanda y la oferta puede ser una oportunidad de inversión lucrativa para ti.</p>
-                </div>
-                <div class="card">
-                    <h3>Descubre una Alternativa Rentable a la Agricultura Tradicional</h3>
-                    <p>Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción de
-                        participar
-                        en el negocio de servicios de maduración de banano. Aprende por qué esta alternativa ofrece
-                        ingresos
-                        constantes desde el primer día y cómo puedes recuperar tu inversión en un plazo mucho más corto.
-                    </p>
-                </div>
-                <div class="card video">
-                    <img src="./assets/im001.jpeg" alt="">
-
-                </div>
-                <div class="card video">
-                    <img src="./assets/im003.jpeg" alt="">
-
-                </div>
-                <div class="card">
-                    <h3>Explora las Ventajas Competitivas del Servicio de Maduración</h3>
-                    <p>Entiende por qué el negocio de maduración de banano ofrece un flujo de ingresos continuo y
-                        cómo puedes
-                        diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
-                </div>
+        <section class="bento">
+            <div class="bento-grid">
+                <div class="cell" style="grid-area: one"><video autoplay muted loop
+                        src="./assets/videos/v002.mp4"></video></div>
+                <div class="cell" style="grid-area: two"><img src="./assets/cm-005.png" alt="imagen"></div>
+                <div class="cell" style="grid-area: three"><video autoplay muted loop
+                        src="./assets/videos/v001.mp4"></video></div>
+                <div class="cell" style="grid-area: four"><img src="./assets/im003.jpeg" alt="imagen"></div>
+                <div class="cell" style="grid-area: five"><img src="./assets/im002.jpeg" alt="imagen"></div>
+                <div class="cell" style="grid-area: six"><img src="./assets/im003.jpeg" alt="imagen"></div>
             </div>
         </section>
+
+
 
         <!-- MAILCHIMP -->
         <section class="container" id="contacto">
 
-            <h3>¡Descubre cómo hacerlo en Nuestro Webinar Exclusivo!</h3>
+            <h3>¡Descubre cómo hacerlo en Nuestro Webinar <strong>Exclusivo</strong>!</h3>
             <div id="mc_embed_shell">
                 <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
 
@@ -142,7 +110,7 @@
                         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                         target="_blank">
                         <div id="mc_embed_signup_scroll" class="animate-bg">
-                            <h4>Suscribete</h4>
+                            <h4>Suscríbete</h4>
                             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                             <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                                         class="asterisk">*</span></label><input type="email" name="EMAIL"
@@ -186,7 +154,77 @@
         </section>
         <!-- MAILCHIMP -->
 
+        <!--  -->
+        <section class="slider">
+            <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
+                <div class="parallax-bg" style="
+                      background-image: url(./assets/im003.jpeg);
+                      opacity: 0.2;
+                    " data-swiper-parallax="-23%"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="title" data-swiper-parallax="-300">Conoce el Potencial de Rentabilidad</div>
+                        <div class="text" data-swiper-parallax="-100">
+                            <p>Aprende sobre el creciente mercado del banano y cómo puedes obtener ganancias tangibles
+                                desde
+                                el
+                                primer día brindando servicios para el sector bananero. </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="title" data-swiper-parallax="-300">Entiende el Impacto de la Demanda y Oferta</div>
+
+                        <div class="text" data-swiper-parallax="-100">
+                            <p>Obtén información valiosa sobre el crecimiento del consumo de banano en Perú y la demanda
+                                insatisfecha
+                                de servicios de maduración en ciudades como Lima, Arequipa, Trujillo, Piura. Comprende
+                                cómo esta
+                                brecha
+                                entre la demanda y la oferta puede ser una oportunidad de inversión lucrativa para ti.
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="title" data-swiper-parallax="-300">Descubre una Alternativa Rentable a la
+                            Agricultura Tradicional</div>
+
+                        <div class="text" data-swiper-parallax="-100">
+                            <p>Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción
+                                de
+                                participar
+                                en el negocio de servicios de maduración de banano. Aprende por qué esta alternativa
+                                ofrece
+                                ingresos
+                                constantes desde el primer día y cómo puedes recuperar tu inversión en un plazo mucho
+                                más corto.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="title" data-swiper-parallax="-300">Explora las Ventajas Competitivas del Servicio de
+                            Maduración</div>
+
+                        <div class="text" data-swiper-parallax="-100">
+                            <p>Entiende por qué el negocio de maduración de banano ofrece un flujo de ingresos continuo
+                                y
+                                cómo puedes
+                                diversificar tu inversión al albergar otras frutas en distintas temporadas.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+
+        </section>
+
+
+
     </main>
+
 
 
     <footer class="footer">
@@ -239,8 +277,29 @@
     </footer>
 
 
-    <script src="./js/main.js"></script>
+
+    <!-- SWIPER JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!--  -->
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            speed: 600,
+            parallax: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
+
 </body>
+
+
+
 
 
 </html>
